Fix checkout page spacing issue

--- a/src/components/RideTo/CheckoutPage/OrderSummary/styles.scss
+++ b/src/components/RideTo/CheckoutPage/OrderSummary/styles.scss
@@ -359,8 +359,6 @@
 }
 
 .bikeHireCost {
-  margin-bottom: -1.5rem;
-
   @media (max-width: 768px) {
     margin-top: 0.5rem;
     margin-bottom: 0;
